--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -56,11 +56,11 @@
                 <ul class="card-description">
                   <li class="card-description__detail">
                     {% include 'component/icons/circle-checked.njk' %}
-                    カード利用明細から個人の利用と経費を分けるのが大変。
+                    <span>カード利用明細から個人の利用と経費を分けるのが大変。</span>
                   </li>
                   <li class="card-description__detail">
                     {% include 'component/icons/circle-checked.njk' %}
-                    確定申告時も大変だ。
+                    <span>確定申告時も大変だ。</span>
                   </li>
                 </ul>
                 <div class="circle-with-arrow">
@@ -79,11 +79,11 @@
                 <ul class="card-description">
                   <li class="card-description__detail">
                     {% include 'component/icons/circle-checked.njk' %}
-                    借りずに資金繰りを改善したい。
+                    <span>借りずに資金繰りを改善したい。</span>
                   </li>
                   <li class="card-description__detail">
                     {% include 'component/icons/circle-checked.njk' %}
-                    期限の迫った請求書の支払いを先延ばししたい。
+                    <span>期限の迫った請求書の支払いを先延ばししたい。</span>
                   </li>
                 </ul>
                 <div class="circle-with-arrow">
@@ -102,11 +102,11 @@
                 <ul class="card-description">
                   <li class="card-description__detail">
                     {% include 'component/icons/circle-checked.njk' %}
-                    できるだけ早く資金調達を実現したい。
+                    <span>できるだけ早く資金調達を実現したい。</span>
                   </li>
                   <li class="card-description__detail">
                     {% include 'component/icons/circle-checked.njk' %}
-                    できる限り低金利で融資してほしい。
+                    <span>できる限り低金利で融資してほしい。</span>
                   </li>
                 </ul>
                 <div class="circle-with-arrow">
