--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -2066,10 +2066,12 @@
 
       .card {
         max-width: 570px;
+        border-radius: 3px;
 
         .card__box {
           background-color: #fff;
           padding: 40px 93px;
+          border-radius: 3px;
 
           @media #{$sp} {
             padding: 30px 20px;
