--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -171,7 +171,7 @@
                         <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img"/>
                       </div>
                       <div class="card__box-title">
-                        <h3 class="ttl-terianry">
+                        <h3 class="ttl-terianry" style="font-size:16px;">
                           セゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カード
                         </h3>
                         <ul class="price-list">
@@ -201,7 +201,7 @@
                         <img src="/assets/img/credit_cards/american-express-02.png" alt="Your Image" class="credit-card-img"/>
                       </div>
                       <div class="card__box-title">
-                        <h3 class="ttl-terianry">
+                        <h3 class="ttl-terianry" style="font-size:16px;">
                           セゾンコバルト・ビジネス・アメリカン・エキスプレス®・カード
                         </h3>
                         <ul class="price-list">
