--- a/app/assets/scss/4-pages/_business_support_loan.scss
+++ b/app/assets/scss/4-pages/_business_support_loan.scss
@@ -228,6 +228,7 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 40px;
+      margin: auto;
 
       @media #{$sp} {
         grid-template-columns: auto;
