--- a/app/pages/catalog_list/index.njk
+++ b/app/pages/catalog_list/index.njk
@@ -197,5 +197,9 @@ link:"news_list"
       <div class="button-icon"></div>
     </div>
   </section>
+
+  <section class="roundbtn">
+    <button type="submit" class="roundbtn__box">チェックした資料をダウンロードする</button>
+  </section>
 </main>
 {% endblock %}
