--- a/app/pages/whitepaper/index.njk
+++ b/app/pages/whitepaper/index.njk
@@ -253,6 +253,11 @@
         </div>
       </div>
     </section>
+
+    <section class="roundbtn">
+      <button type="submit" class="roundbtn__box">チェックした資料をダウンロードする</button>
+    </section>
+
   </main>  
 
 {% endblock %}
