--- a/app/assets/scss/4-pages/_common.scss
+++ b/app/assets/scss/4-pages/_common.scss
@@ -3,3 +3,81 @@
   common
   ----------------
 */
+
+.roundbtn {
+  background: #fff;
+  padding: 15px 0;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  z-index: 100;
+  text-align: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.35);
+  opacity: 0;
+  transition: all .3s;
+  display: none;
+  @media #{$sp} {
+    padding: 10px 0;
+  }
+  &.show {
+    opacity: 1;
+    display: block;
+    &.fade-out {
+      display: none;
+      opacity: 0;
+    }
+  }
+  &.fade-out {
+    display: none;
+    opacity: 0;
+  }
+  a {
+    text-decoration: none;
+    transition: all 3s;
+  }
+  button {
+    display: block;
+    width: 450px;
+    color: #fff;
+    font-size: 20px;
+    text-align: center;
+    padding: 16px 35px;
+    position: relative;
+    border-radius: 3px;
+    margin: 0 auto;
+    transition: all .3s;
+    border: 2px solid #0497b5;
+    background: #0497b5;
+    @media #{$sp} {
+      width: 85%;
+      padding: 10px 15px;
+      font-size: 14px;
+    }
+    &:hover {
+      opacity: 1;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+      width: 8px;
+      height: 8px;
+      right: 12px;
+      border-top: 2px solid #fff;
+      border-right: 2px solid #fff;
+      transform: rotate(45deg);
+      transition: all .3s;
+    }
+    &:hover {
+      opacity: 1;
+      background: #fff;
+      color: #0497b5;
+      &::before {
+        border-top: 2px solid #0497b5;
+        border-right: 2px solid #0497b5;
+      }
+    }
+  }
+}
