--- a/app/pages/faq_service_list/index.njk
+++ b/app/pages/faq_service_list/index.njk
@@ -33,7 +33,7 @@
       <div class="containers">
         <h1 class="ttl-primary">「支払い.com」に関するよくある質問</h1>
 
-        <h3 class="ttl-tertiary fwn">サービスごとによくあるご質問をまとめました。</h3>
+        <h3 class="ttl-tertiary fwn" style="font-weight:normal;">サービスごとによくあるご質問をまとめました。</h3>
       </div>
     </section>
 
@@ -59,7 +59,7 @@
           <div class="QA__content">
             <div class="question__content" >
               <div class="QA__content-head">Q.</div>
-              <div class="QA__content-content">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</div>
+              <div class="QA__content-content" style="color:#0497b5;">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</div>
               <div id="arrow-icon" class="QA__content-icon">
                 {% include "component/icons/arrow.njk" %}
               </div>
