create ui payment com page

--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -42,6 +42,7 @@ $blue-color: #0497b5;
 $blue-color-1: #00758c;
 $blue-color-2: #e5f4f8;
 $blue-color-3: #004098;
+$blue-color-4: #014A58;
 
 $green-color: #007477;
 $green-color-1: #53d2b2;
