--- a/app/assets/scss/4-pages/_payment_com.scss
+++ b/app/assets/scss/4-pages/_payment_com.scss
@@ -166,4 +166,140 @@
       object-fit: contain;
     }
   }
+
+  .section-secondary {
+    .section-secondary-content {
+      margin: 50px 0 70px 0;
+      .card {
+        position: relative;
+        width: 380px;
+        border-radius: 3px;
+        box-shadow: 0px 3px 20px #0000001c;
+        padding: 32px 30px 30px;
+        .black_pill_btn {
+          position: absolute;
+          display: inline-block;
+          border-radius: 24px;
+          top: -15px;
+          left: 50%;
+          transform: translateX(-50%);
+        }
+        .ttl-quinary {
+          font-size: 20px;
+          font-weight: bold;
+          line-height: 29px;
+          text-align: center;
+          color: $blue-color;
+          .yellow-underline {
+            background: linear-gradient(
+              180deg,
+              rgba(0, 0, 0, 0) 70%,
+              #ffff01 0
+            );
+          }
+        }
+        img {
+          width: 100%;
+          height: 179px;
+          object-fit: cover;
+          margin: 20px 0;
+        }
+        .card-description {
+          li {
+            font-size: 16px;
+          }
+        }
+      }
+    }
+  }
+
+  .section-tertiary {
+    color: $white-color;
+    background-color: $blue-color-4;
+    padding: 70px 0 80px 0;
+    .section-tertiary-container {
+      margin: auto;
+      text-align: center;
+      .ttl-primary {
+        font-size: 32px;
+        margin-bottom: 100px;
+      }
+      .act-more {
+        margin-left: 0;
+        position: relative;
+        padding: 14px 64px 14px 48px;
+        white-space: nowrap;
+
+        &-tooltip {
+          position: absolute;
+          width: auto;
+          top: -65px;
+          width: auto;
+          white-space: nowrap;
+          left: 50%;
+          transform: translateX(-50%);
+
+          &__content {
+            position: relative;
+            width: fit-content;
+            font-size: 20px;
+            margin-bottom: 25px;
+            background-color: transparent;
+            border-radius: 3px;
+            color: $white-color;
+            border: 1px solid white;
+            padding: 10px 20px;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &::before {
+              position: absolute;
+              content: "\A";
+              top: calc(100% - 1px);
+              left: calc(50% - 15px);
+              width: 0;
+              height: 0;
+              border-left: 15px solid transparent;
+              border-right: 15px solid transparent;
+              border-top: 10px solid #fff;
+            }
+          }
+        }
+
+        &-content {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          .act-more-content-img {
+            position: relative;
+            display: block;
+            width: 153px;
+            height: 90px;
+            margin-bottom: 30px;
+            img {
+              width: 115px;
+              height: 100%;
+              &.primary-img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: 2;
+              }
+              &.secondary-img {
+                position: absolute;
+                bottom: -10px;
+                right: 0;
+                z-index: 1;
+              }
+            }
+          }
+          .act-more-content-btn {
+            height: auto;
+          }
+        }
+      }
+    }
+  }
 }
