--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -114,15 +114,82 @@ link: ""
     <div class="container-1200">
       <h1 class="ttl-primary">このようなお悩みをお持ちの企業様向けのサービスです。</h1>
       <div class="section-secondary-content">
-        <div class="flex gap30 grid">
-          <div class="grid__card">
-            <div class="grid__card--category">広告業界</div>
+        <div class="flex gap30">
+          <a href="#" class="card">
+            <span class="black_pill_btn small">広告業界</span>
             <h5 class="ttl-quinary">
-              広告出稿費の <br />
+              <span class="yellow-underline">広告出稿費の</span><br />
               資金繰りが苦しい
             </h5>
             <img src="/assets/img/common/payment-section-card-1.png" alt="cast flow">
-            <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
+            <ul class="card_description">
+              <li>
+                {% include 'component/icons/blue-tick.njk' %}
+                クライアント与信が通らず前払いを 依頼したところ失注してしまう
+              </li>
+              <li>
+                {% include 'component/icons/blue-tick.njk' %}
+                足元資金がなく追加出稿ができない
+              </li>
+            </ul>
+          </a>
+          <a href="#" class="card">
+            <span class="black_pill_btn small">建設・製造業界</span>
+            <h5 class="ttl-quinary">
+              <span class="yellow-underline">大規模案件受注時の</span><br />
+              資金繰りが苦しい
+            </h5>
+            <img src="/assets/img/common/payment-section-card-2.png" alt="cast flow">
+            <ul class="card_description">
+              <li>
+                {% include 'component/icons/blue-tick.njk' %}
+                多重構造であるため支払いサイクルが長くなってしまう
+              </li>
+              <li>
+                {% include 'component/icons/blue-tick.njk' %}
+                ファクタリングを利用しているが、 利益率が下がっている
+              </li>
+            </ul>
+          </a>
+          <a href="#" class="card">
+            <span class="black_pill_btn small">建設・製造業界</span>
+            <h5 class="ttl-quinary">
+              <span class="yellow-underline">仕入れから売上化までの</span><br />
+              資金繰りが苦しい
+            </h5>
+            <img src="/assets/img/common/payment-section-card-3.png" alt="cast flow">
+            <ul class="card-description">
+              <li>
+                {% include 'component/icons/blue-tick.njk' %}
+                仕入れから商品販売までの支払いサイクルが長い
+              </li>
+              <li>
+                {% include 'component/icons/blue-tick.njk' %}
+                支払いを先延ばししたいが、対応策が ない
+              </li>
+            </ul>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section-tertiary fadein">
+    <div class="section-tertiary-container">
+      <h1 class="ttl-primary">支払い.comが、「資金繰りのお悩み」を解決します。</h1>
+      <div class="act-more">
+        <div class="act-more-tooltip">
+          <h4 class="act-more-tooltip__content">支払い.comの仕組みとメリットが3分でわかる！</h4>
+        </div>
+        <div class="act-more-content">
+          <div class="act-more-content-img">
+            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            <img class="secondary-img" src="/assets/img/common/documents_image.png" alt="Documents image 2">
+          </div>
+          <div class="act-more-content-btn">
+            <a href="#" class="blue_gradient_btn small">
+              サービス資料ダウンロード
+            </a>
           </div>
         </div>
       </div>
