--- a/app/pages/seminar_form/index.njk
+++ b/app/pages/seminar_form/index.njk
@@ -106,13 +106,7 @@
           </div>
         </div>
 
-        <div class="form-section financial-service-field">
-          <div class="form-ttl">
-            <span class="item">業種</span> <span class="required"></span>
-          </div>
 
-          <input type="text" placeholder="その他金融業">
-        </div>
 
         <div class="form-section name-field">
           <div class="form-ttl">
@@ -160,7 +154,7 @@
           </label>
         </div>
 
-        <a href="#">
+        <a href="https://www.saisoncard.co.jp/info/legal/" target="_blank">
           <p class="term-agreement">「個人情報の取扱い（収集・保有・利用・提供）に関する同意条項」について</p>
         </a>
 
