--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -174,6 +174,71 @@ link: ""
     </div>
   </section>
 
+  <section class="section-quaternary fadein">
+    <div class="container-1200">
+      <div class="ttl-notice">ご利用までの流れ</div>
+      <h1 class="ttl-primary">顧客・取引データを入力したら、あとはお任せ！</h1>
+      <h4 class="ttl-quaternary">
+        お申し込みは簡単3ステップ。<span class="yellow-underline">最短60秒でご利用できます！</span>
+      </h4>
+      <div class="section-quaternary-content">
+        <div class="flex gap60">
+          <a href="#" class="card">
+            <div class="card-title">
+              <div class="step-no">STEP01</div>
+              <div class="step-title">申し込み・カード決済</div>
+            </div>
+            <div class="card-content">
+              <span class="tag">お客様</span>
+              <img src="/assets/img/common/flow_usage_1.png" alt="cast flow">
+              <div class="card_description">
+                振込金額や口座情報を入力。同時に預り金として、振込金額＋利用手数料分のカード決済を行います。
+              </div>
+            </div>
+          </a>
+          <a href="#" class="card">
+            <div class="card-title">
+              <div class="step-no">STEP02</div>
+              <div class="step-title">支払い.comが代わりに振込</div>
+            </div>
+            <div class="card-content">
+              <span class="tag outline">支払い.com</span>
+              <img src="/assets/img/common/flow_usage_2.png" alt="cast flow">
+              <div class="card_description">
+                指定日に支払い.comが口座振込を行います。お客様は振り込みをお待ち下さい。
+              </div>
+            </div>
+          </a>
+          <a href="#" class="card">
+            <div class="card-title">
+              <div class="step-no">STEP03</div>
+              <div class="step-title">支払い.comが代わりに振込</div>
+            </div>
+            <div class="card-content">
+              <span class="tag">お客様</span>
+              <img src="/assets/img/common/flow_usage_3.png" alt="cast flow">
+              <div class="card-description">
+                振込金額＋手数料をカード会社へお支払ください。<br />
+                <span class="text-note">※支払い.comはカード会社より料金の回収を行うため、直接の返済は必要ありません。</span>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="information">
+          <span class="primary-txt">振込名義は自由に指定OK</span> 　お客様の名前で振り込みできるので、支払先へは利用を知られません
+        </div>
+        <div>
+          <a href="#" class="act-more orange_more2">
+            <div class="act-more-tooltip">
+              <h4 class="act-more-tooltip__content">お急ぎの方はまずは無料登録！審査や書類提出は必要ありません。</h4>
+            </div>
+            まずは無料登録からスタート
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="section-tertiary fadein">
     <div class="section-tertiary-container">
       <h1 class="ttl-primary">支払い.comが、「資金繰りのお悩み」を解決します。</h1>
@@ -207,29 +272,29 @@ link: ""
       <div class="containers">
         <ul class="inherit card-list">
           {% for item in payment_page.reason_chosing %}
-            <li class="card-type23">
-              <a href="#" class="card">
-                <div class="ttl-quaternary-container">
-                  <h4 class="ttl-quaternary">
-                    {{ item.title }}
-                  </h4>
-                </div>
-                <div class="card-image">
-                  <img src={{item.image}}>
-                </div>
-                <div class="card-description">
-                  {{ item.description | safe }}
-                </div>
+          <li class="card-type23">
+            <a href="#" class="card">
+              <div class="ttl-quaternary-container">
+                <h4 class="ttl-quaternary">
+                  {{ item.title }}
+                </h4>
+              </div>
+              <div class="card-image">
+                <img src={{item.image}}>
+              </div>
+              <div class="card-description">
+                {{ item.description | safe }}
+              </div>
 
-                {% if item.notes %}
-                  <ul class="card-note">
-                    {% for note in item.notes %}
-                      <li class="text-muted">{{ note}}</li>
-                    {% endfor %}
-                  </ul>
-                {% endif %}
-              </a>
-            </li>
+              {% if item.notes %}
+              <ul class="card-note">
+                {% for note in item.notes %}
+                <li class="text-muted">{{ note}}</li>
+                {% endfor %}
+              </ul>
+              {% endif %}
+            </a>
+          </li>
           {% endfor %}
         </ul>
       </div>
