--- a/app/assets/scss/3-modules/_header.scss
+++ b/app/assets/scss/3-modules/_header.scss
@@ -8,13 +8,12 @@ header {
   margin: auto;
   position: fixed;
   top: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 0;
   width: 100%;
   z-index: 30;
   transition: all 0.3s;
   &.hide {
-    transform: translateY(-1000px);
+    transform: translateY(-140px);
   }
 
   // 構築範囲　ここから　↓
