--- a/app/assets/scss/3-modules/_home.scss
+++ b/app/assets/scss/3-modules/_home.scss
@@ -239,6 +239,7 @@
               background-color: transparent;
               -webkit-box-shadow: none;
               box-shadow: none;
+              overflow: hidden;
 
               span {
                 display: inline-block;
@@ -248,6 +249,11 @@
 
               img {
                 padding: 0 10px;
+                transition: all .3s;
+              }
+              &:hover {
+                opacity: 1;
+                transform: scale(1.1);
               }
             }
 
