--- a/app/assets/scss/4-pages/_seminar_detail.scss
+++ b/app/assets/scss/4-pages/_seminar_detail.scss
@@ -144,9 +144,19 @@
         .custom-check-box-label {
           font-size: 18px;
           font-weight: 500;
+          position: relative;
           @media #{$sp} {
             font-size: 14px;
           }
+          &::before {
+            content: "";
+            position: absolute;
+            top: 1px;
+            left: -2em;
+            width: 30px;
+            height: 30px;
+            background: url("../img/common/check_g.svg") 50% / contain no-repeat;
+          } 
         }
 
         @media screen and (max-width: 1200px) {
