--- a/app/pages/seminar_detail/index.njk
+++ b/app/pages/seminar_detail/index.njk
@@ -71,22 +71,11 @@
     <div class="container-1200">
       <div class="section-content">
         <h2 class="ttl-secondary">こんな方におすすめです</h2>
-
-        <div class="section-content__form"><label class="custom-checkbox flex fS aiC">
-            <input type="checkbox">
-            <span class="checkmark"></span> <span class="custom-check-box-label">経営層、経理・管理部長の方 </span>
-          </label>
-
-          <label class="custom-checkbox flex fS aiC">
-            <input type="checkbox">
-            <span class="checkmark"></span> <span class="custom-check-box-label">請求業務のコスト・生産性に課題間をお持ちの方 </span>
-          </label>
-
-          <label class="custom-checkbox flex fS aiC">
-            <input type="checkbox">
-            <span class="checkmark"></span> <span class="custom-check-box-label">経費精算業務のコスト生産性に課題感をお持ちの方 </span>
-          </label>
-        </div>
+        <ul class="section-content__form">
+          <li class="custom-check-box-label">経営層、経理・管理部長の方</li>
+          <li class="custom-check-box-label">請求業務のコスト・生産性に課題間をお持ちの方</li>
+          <li class="custom-check-box-label">経費精算業務のコスト生産性に課題感をお持ちの方</li>
+        </ul>
       </div>
     </div>
   </section>
