--- a/app/assets/scss/4-pages/_business_support_loan.scss
+++ b/app/assets/scss/4-pages/_business_support_loan.scss
@@ -15,6 +15,10 @@
     .ttl-primary {
       font-size: 32px;
       margin-bottom: 40px;
+      @media #{$sp} {
+        font-size: 24px;
+        margin-bottom: 20px;
+      }
     }
 
     .ttl-quaternary {
@@ -25,6 +29,7 @@
 
       @media #{$sp} {
         font-size: 18px;
+        margin-bottom: 20px;
       }
     }
   }
@@ -161,6 +166,9 @@
       .ttl-quaternary {
         font-size: 24px;
         color: #fff;
+        @media #{$sp} {
+          font-size: 20px;
+        }
       }
     }
 
@@ -221,6 +229,9 @@
     .ttl-secondary {
       color: #fff;
       font-size: 32px;
+      @media #{$sp} {
+        font-size: 22px;
+      }
     }
 
     .card-support-list {
@@ -272,11 +283,19 @@
     margin: auto;
 
     @media #{$sp} {
-      padding: 35px 15px;
+      padding: 25px 15px;
+    }
+    .ttl-primary {
+      @media #{$sp} {
+        font-size: 22px;
+      }
     }
 
     &__description {
       font-size: 20px;
+      @media #{$sp} {
+        font-size: 14px;
+      }
     }
 
     &__flow {
@@ -442,6 +461,12 @@
     padding: 70px 0;
     background: #f5f5f5;
 
+    .ttl-primary {
+      @media #{$sp} {
+        font-size: 22px;
+      }
+    }
+
     ul li a:after {
       content: " ";
       height: 0;
@@ -556,6 +581,10 @@
         }
       }
     }
+
+    @media #{$sp} {
+      padding: 25px 15px;
+    }
   }
 
   .section-question-and-answer {
@@ -568,6 +597,11 @@
     @media #{$sp} {
       padding: 35px 15px;
     }
+    .ttl-secondary {
+      @media #{$sp} {
+        font-size: 22px;
+      }
+    }
 
     &__description {
       font-size: 20px;
@@ -576,6 +610,11 @@
       a {
         text-decoration: underline;
         color: $primary-color;
+      }
+
+      @media #{$sp} {
+        font-size: 16px;
+        line-height: 25px;
       }
     }
 
@@ -593,6 +632,9 @@
     .ttl-secondary {
       font-size: 32px;
       margin-bottom: 61px;
+      @media #{$sp} {
+        margin-bottom: 30px;
+      }
     }
 
     .question-tab,
@@ -661,6 +703,9 @@
         .ttl-tertiary {
           font-weight: bold;
         }
+      }
+      @media #{$sp} {
+        margin: 25px 0 20px;
       }
     }
 
@@ -751,6 +796,11 @@
         .card-type6 {
           .ttl-quaternary-container {
             margin-bottom: 0;
+            .ttl-quaternary {
+              @media #{$sp} {
+                font-size: 16px;
+              }
+            }
           }
         }
 
